--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>vue-demo</title>
   </head>
   <body>
@@ -13,5 +12,16 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="http://meipu1.video.meipai.com/7e61b658-b9d9-40c6-80eb-01c088fa23a6.js"></script>
+    <script>
+      Performance({
+        domain:'http://some.com/api', 
+        outtime:500,
+        isPage:true,
+        isResource:true,
+        isError:true,
+        filterUrl:['http://localhost:35729/livereload.js?snipver=1']
+    })
+    </script>
   </body>
 </html>
